--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,7 @@
       <li><%= link_to "Home", root_path, class: "#{'active' if current_page?(root_path)}" %></li>
       <li><%= link_to "Artists", artists_path , class: "#{'active' if current_page?(artists_path)}"%></li>
       <li><%= link_to "About", about_path, class: "#{'active' if current_page?(about_path)}" %></li>
+      <li><%= link_to "Services", services_path, class: "#{'active' if current_page?(services_path)}" %></li>
       <li><%= link_to "Contact us", contact_path, class: "nav-btn" %></li>
 
     	<!-- <li>
