--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -14,6 +14,8 @@ nav.navbar.d-block.d-sm-none
       li
         = link_to 'About Us', about_path, class: 'navbar-link'
       li
+        = link_to 'Services', services_path, class: 'navbar-link'
+      li
         = link_to 'Contact', contact_path, class: 'navbar-link'
       li
         = link_to 'News', news_posts_path, class: 'navbar-link'
