--- a/app/assets/stylesheets/components/_fake_container.scss
+++ b/app/assets/stylesheets/components/_fake_container.scss
@@ -1,5 +1,7 @@
 .fake-container {
   position: relative;
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
