--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -11,5 +11,6 @@
         .row.two-buttons-container.mt-4
           .col-12.col-sm-6
             = link_to "Schedule a call", "#", class: "button-primary artist-button"
+  .circle-banner-container
     .circle.banner-circle.bg-blue.c-white.rotating
       p.title. <strong>·</strong>ARTYQUE FOR<strong>·</strong> COLLECTORS
