fix more overflow bugs

--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,26 +1,30 @@
 <div class="new-look-banner bg-blue-gradient about-banner position-relative height-fit">
-  <div class="top-right-circle"></div>
-  <!-- <div class="bot-left-circle"></div> -->
-  <div class="line-wrapper w-100">
-    <div class="d-flex justify-content-between align-items-center">
-      <h4 class="title color c-white ml-13perc">ABOUT US</h4>
-      <hr class="lines w-70">
+  <div class="wrapper-hidden">
+    <div class="top-right-circle"></div>
+    <!-- <div class="bot-left-circle"></div> -->
+    <div class="line-wrapper w-100">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="title color c-white ml-13perc">OUR SERVICES</h4>
+        <hr class="lines w-70">
+      </div>
+    </div>
+    <div class="fake-container">
+      <div class="about-text">
+        <p>
+          <strong>Collecting art is complicated</strong>, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
+        </p>
+        <br>
+        <p>
+          We went through this struggle too. Isn’t there a missing step that would ease the transition from emerging to established artists? And so we came up with an idea: by guiding an artist’s career we could ensure his growth and increase the value of his works in an organic and steady way.
+        </p>
+        <br>
+        <p>
+          We created ARTYQUE agency to give a business and curatorial hand to artists we select and believe in, and to make collecting art easier, more rewarding and beneficial in the long term.
+        </p>
+      </div>
     </div>
   </div>
-  <div class="fake-container">
-    <div class="about-text">
-      <p>
-        <strong>Collecting art is complicated</strong>, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
-      </p>
-      <br>
-      <p>
-        We went through this struggle too. Isn’t there a missing step that would ease the transition from emerging to established artists? And so we came up with an idea: by guiding an artist’s career we could ensure his growth and increase the value of his works in an organic and steady way.
-      </p>
-      <br>
-      <p>
-        We created ARTYQUE agency to give a business and curatorial hand to artists we select and believe in, and to make collecting art easier, more rewarding and beneficial in the long term.
-      </p>
-    </div>
+  <div class="circle-banner-container circle-left">
     <div class="circle about-circle banner-circle bg-blue c-white rotating">
       <p class="title"><strong>·</strong>ARTYQUE FOR<strong>·</strong> COLLECTORS</p>
     </div>
