implements form on the design

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -171,6 +171,10 @@
       padding: 0 196px 40px;
     }
   }
+  .form-text {
+    margin: 0 auto;
+    max-width: 591px;
+  }
   .top-right-circle{
     position: absolute;
     width: 60%;
@@ -252,6 +256,9 @@
   }
   .title{
     font-weight: 300;
+  }
+  &.form-banner {
+    padding: 158px 0;
   }
 }
 
