--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -49,6 +49,13 @@ label.featured_check {
 		}
 }
 
+.form-desc {
+  text-align: right;
+  max-width: 273px;
+  margin: 0 0 0 auto;
+  font-size: 20px;
+}
+
 .newsletter-form {
   margin: 0 auto;
   width: 62%;
