--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,5 +29,7 @@
   <%= render "shared/footer_banner" %>
   <%= render "shared/featured_stories" %>
   <%= render "shared/newsletter_signup" %>
+  <%= render "shared/contact_us_form" %>
+
   <%#= render 'shared/stim_modal' %>
 </div>
