fix some linkes

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -134,7 +134,11 @@
 // -----------------------
 
 .new-look-banner {
-  min-height: calc(75vh - #{$header-height});
+  min-height: calc(100vh - #{$header-height});
+  @include media-breakpoint-up(sm) {
+    min-height: calc(75vh - #{$header-height});
+    height: auto;
+  }
   text-align: center;
   display: flex;
   justify-content: center;
