--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -7,7 +7,8 @@
         h4.header-text.color.mt-3.c-dark-blue.coachella-black.footer-banner-text. Collect with ARTYQUE.
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
-          = link_to "Schedule a call", "#", class: "button-primary artist-button footer-button"
+          = link_to "Schedule a call", contact_path, class: "button-primary artist-button footer-button"
         .col-12.col-sm-6
-          = link_to "Available Works", "#", class: "button-secondary artist-button footer-button"
+          = link_to "Available Works", artists_path, class: "button-secondary artist-button footer-button"
+          / TODO change to shopify
 
