--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -25,6 +25,5 @@
       .col-12.col-sm-6.center-margin
         = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
       .col-12.col-sm-6.center-margin
-        = link_to "Available Works", news_posts_path, class: "button-primary artist-button"
-
-/ this is a comment
+        = link_to "Available Works", artists_path, class: "button-primary artist-button"
+        / TODO change to shopify
