--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,7 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Our Artists", artists_path %></li>
       <li><%= link_to "About Us", about_path %></li>
+      <li><%= link_to "Services", services_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><%= link_to "News", news_posts_path %></li>
     </ul>
