--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <div class="new-look-banner bg-blue-gradient about-banner"></div>
-<div class="container">
+<div class="container overflow-hidden">
   <%= render "shared/who_is_artyque" %>
 </div>
