--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,4 +1,4 @@
-<div class="new-look-banner bg-blue-gradient about-banner position-relative height-fit">
+<div class="new-look-banner services-banner bg-blue-gradient about-banner position-relative height-fit">
   <div class="wrapper-hidden">
     <div class="top-right-circle"></div>
     <!-- <div class="bot-left-circle"></div> -->
