--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -1,18 +1,15 @@
-.wrapper-banner#banner
-  div class=['banner-content', 'position-relative', 'bg-blue-gradient']
-    .row.inner-banner.w-100.d-sm-flex.align-items-center.banner-flexible.m-0
-      = inline_svg "top_wave.svg", class: "wave-top position-absolute fill-pink"
-      = inline_svg "bottom_wave.svg", class: "small-wave-bottom wave-bottom position-absolute fill-pink"
-      .col-12.col-md-6.text-shadow-light.c-pink
-        h4.display-center.c-white
-          | Get in touch
-        br
-        p
-          | We are always open for applications, collaborations and partnerships
-        p
-          | You can contact us by filling out this form or by writing directly to 
-          a.c-white[href="mailto:info@artyque.com" target="_blank"]
-            | info@artyque.com
-      .col-12.col-md-6
-        .form-set
-          == render 'contact_forms/new'
+.new-look-banner.bg-blue-gradient.position-relative.wrapper-banner.form-banner
+  img.home-wave-top.wave-top.position-absolute.drag-disable src="#{image_path('top_wave.svg')}"
+  img.wave-bottom.position-absolute.drag-disable src="#{image_path('bottom_wave.svg')}"
+  .container
+    .banner-content
+      .row
+        .col-12
+          h4.coachella-regular.text-center.c-white.form-text.mb-5 Are you interested in an artwork? Do you want to be represented by us? Are you open for collaboration?
+      .row.mt-5
+        .col-12.col-md-5.
+          .form-desc
+            p.coachella-light.c-white We are looking forward to hearing from you. Please, fill the form or contact us via <strong class="coachella-black">info@artyque.com</strong>
+        .col-12.col-md-7
+          .form-set
+            == render 'contact_forms/new'
