--- a/app/assets/stylesheets/design_toolbox/_color.scss
+++ b/app/assets/stylesheets/design_toolbox/_color.scss
@@ -9,6 +9,9 @@
   &-light-blue{
     color: $light-blue;
   }
+  &-off-blue{
+    color: $light-blue;
+  }
   &-beige{
     color: $beige;
   }
@@ -56,6 +59,9 @@
   }
   &-light-blue{
     background-color: $light-blue;
+  }
+  &-off-blue{
+    background-color: $off-blue;
   }
   &-beige{
     background-color: $beige;
