--- a/app/views/shared/_our_services.html.slim
+++ b/app/views/shared/_our_services.html.slim
@@ -3,13 +3,13 @@
   .service-cards.mt-5
     .row.justify-content-center
       .service-card.col-12.col-md-4.mb-5
-        .image.bg-beige.mb-3.position-relative
+        .image.bg-off-blue.mb-3.position-relative
           .text-title
             p.coachella-regular For
             p.coachella-regular Artists
         p.text-left.c-gray Our mission is to help highly promising artists to exhibit their art across Europe, gain international recognition and in the process, increase their artistic value.
       .service-card.col-12.col-md-4.mb-5
-        .image.bg-beige.mb-3.position-relative
+        .image.bg-pink.mb-3.position-relative
           .text-title
             p.coachella-regular For
             p.coachella-regular.underline Collectors
