--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,6 +6,7 @@ $dark-blue-gradient: linear-gradient(67.97deg, #1A2F3E 3.78%, #1B3F4E 112.76%);
 $blue: #274E58;
 $blue-gradient: linear-gradient(67.97deg, #234A54 3.78%, #1A2F3E 112.76%);
 $light-blue: #0081A2;
+$off-blue: #B6C7CB;
 $beige: #FEF0E7;
 $beige-gradient: linear-gradient(67.97deg, #EDDFD6 3.78%, #FEF0E7 112.76%);
 $pink: #DDCDCA;
