fixes mobile view on about banner, and implements modals

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -168,7 +168,7 @@
     @extend .c-white;
     justify-content: normal;
     .about-text {
-      padding: 0 196px 40px;
+      padding: 0 12% 40px;
     }
   }
   .form-text {
