--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -9,6 +9,7 @@
 
 .modal-content {
 	padding-bottom: 30px;
+
 	.separate-content {
 		padding: 30px 0;
 		&-bottom {
@@ -41,4 +42,18 @@
 	li {
 		line-height: 30px;
 	}
+}
+
+.services {
+  display: flex;
+  .service {
+    background-color: $beige;
+    max-width: 400px;
+    height: 100%;
+    .to-corner {
+      position: absolute;
+      top: -16px;
+      left: 7%;
+    }
+  }
 }
