--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,6 +22,7 @@
   <%#= render "shared/quote_block" %>
   <%= render "shared/main_banner" %>
   <%= render "shared/top_artists" %>
+  <%= render "shared/toggle" %>
   <%= render "shared/page_description" %>
   <%= render "shared/how_it_works" %>
   <%= render "shared/quote_banner" %>
