--- a/app/assets/stylesheets/components/_toggle_button.scss
+++ b/app/assets/stylesheets/components/_toggle_button.scss
@@ -3,14 +3,14 @@
   position: relative;
   width: 80px;
   height: 26px;
-  background-color: #dc3545;
+  background-color:$dark-blue;
   border-radius: 20px;
   .ball {
     $radius: 16px;
     height: $radius;
     width: $radius;
     border-radius: 50%;
-    background-color: white;
+    background-color: $pink;
     margin: 0 auto 0 0;
     margin-top: -8px;
     position: absolute;
