make collector side text

--- a/app/views/shared/_collector_how_it_works.html.slim
+++ b/app/views/shared/_collector_how_it_works.html.slim
@@ -1,6 +1,6 @@
 .line-wrapper
   .container.d-flex.justify-content-between
-    h4.title. How it works (from the other tab)
+    h4.title. How it works
     hr.lines.w-75
 .container
   .steps-container
@@ -10,13 +10,13 @@
           = image_tag "imageA.png", class: "image-intro-hiw image-intro-hiw-a"
           p.step.mt-4 <strong>Collect</strong>
           .text
-            p. this is santi doing tabs, a shit ton ammount of tabs
+            p. Choose from a hand-picked sellection of artists presented by ARTYQUE agency.
       .col-12.col-md-6.col-lg-4
         .HIW-card
             = image_tag "imageB.png", class: "image-intro-hiw image-intro-hiw-b"
             p.step.mt-4 <strong>Promote</strong>
             .text
-              p. Lalalalalallaalalla
+              p. Make sure the story of your new artwork continues after it gets to you. We propose carefull tailored projects to grow the visibility of your collected works to secure your invesment growth.
       .col-12.col-md-6.col-lg-4
         .HIW-card
             = image_tag "imagec.png", class: "image-intro-hiw image-intro-hiw-c"
