--- a/app/assets/stylesheets/components/_toggle_button.scss
+++ b/app/assets/stylesheets/components/_toggle_button.scss
@@ -1,7 +1,8 @@
 .toggle-button {
   margin: 0 auto;
   position: relative;
-  width: 80px;
+  max-width: 80px;
+  width: 100%;
   height: 26px;
   background-color:$dark-blue;
   border-radius: 20px;
