update with text from ksenia

--- a/app/views/shared/_artist_how_it_works.html.slim
+++ b/app/views/shared/_artist_how_it_works.html.slim
@@ -8,18 +8,18 @@
       .col-12.col-md-6.col-lg-4
         .HIW-card
           = image_tag "imageA.png", class: "image-intro-hiw image-intro-hiw-a"
-          p.step.mt-4 <strong>Collect</strong>
+          p.step.mt-4 <strong>Apply</strong>
           .text
-            p. Choose from a hand-picked sellection of artists presented by ARTYQUE agency.
+            p. Send your portfolio, CV and artist statement. We receive many applications, be creative, make yours stand out!
       .col-12.col-md-6.col-lg-4
         .HIW-card
             = image_tag "imageB.png", class: "image-intro-hiw image-intro-hiw-b"
-            p.step.mt-4 <strong>Promote</strong>
+            p.step.mt-4 <strong>Get selected</strong>
             .text
-              p. Make sure the story of your new artwork continues after it gets to you. We propose carefull tailored projects to grow the visibility of your collected works to secure your invesment growth.
+              p. To provide quality work to each of our artists, spaces are limited. Every application is nonetheless appreciated, reviewed and given an equal chance. We usually select a new artist every 2 months.
       .col-12.col-md-6.col-lg-4
         .HIW-card
             = image_tag "imagec.png", class: "image-intro-hiw image-intro-hiw-c"
-            p.step.mt-4 <strong>Thrive</strong>
+            p.step.mt-4 <strong>Back to the studio</strong>
             .text
-              p. instead of simply following trends, set them by supporting our artists and benefit from their growth.
+              p. Once you are part of the ARTYQUE Family, you will be able to enjoy a stress free creation process while we work our magic and promote your art across Europe.
