--- a/app/views/shared/_artist_page_description.html.slim
+++ b/app/views/shared/_artist_page_description.html.slim
@@ -1,7 +1,7 @@
 .mt-4
   br
   br
-  p.text-center.px-5.home-text Collecting emerging Art is the <strong>start of an exciting journey</strong>, but surely also of a risky one. It is hard to predict if collected works will grow in value over the years. With tastes and trends constantly changing, it is difficult to anticipate which artist will <strong>become the next sensation.</strong>
+  p.text-center.px-5.home-text Being a professional artist is the dream of many, but also, let’s face it, a tough career choice. You are the visionaries, the creators, the ones who feed this market with your work and yet, you are the ones most challenged by it. It feels like to succeed today, in addition to your talent, <strong>you need to have business skills to develop your artistic voice</strong> like a brand.
   br
   br
-  p.text-center.px-5.home-text With ARTYQUE, instead of <strong>simply collecting works</strong>, you can be part of something bigger, where the act of collecting supports the artist in new and powerful ways. Become a tastemaker and take the future of your collection into your own hands.
+  p.text-center.px-5.home-text With ARTYQUE you can <strong>take your career under control</strong>. By working with our agency you get a team of art professionals to support your growth.  We scope for new opportunities, negotiate on your behalf and promote your work to help you thrive. Create your next masterpiece, stress-free, while we work for your recognition.
