include some comments

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -77,7 +77,10 @@
 .navbar-items {
   display: flex;
   list-style: none;
-  margin: 20px 80px;
+  @include media-breakpoint-up(lg) {
+    margin: 20px 80px;
+  }
+  margin: 20px 0;
   li {
     padding: 3px 12px;
     color: $medium-gray;
