--- a/app/assets/stylesheets/components/_circle.scss
+++ b/app/assets/stylesheets/components/_circle.scss
@@ -14,6 +14,8 @@
 .banner-circle {
   width: 123px;
   height: 123px;
+  font-size: 0.8em;
+  letter-spacing: 0.2em;
   border-radius: 50%;
   @media( max-width: 755px) {
     bottom: -64%;
