--- a/app/assets/stylesheets/components/_toggle_button.scss
+++ b/app/assets/stylesheets/components/_toggle_button.scss
@@ -3,23 +3,23 @@
   position: relative;
   max-width: 80px;
   width: 100%;
-  height: 26px;
+  height: 14px;
   background-color:$dark-blue;
   border-radius: 20px;
   .ball {
-    $radius: 16px;
+    $radius: 36px;
     height: $radius;
     width: $radius;
     border-radius: 50%;
     background-color: $pink;
     margin: 0 auto 0 0;
-    margin-top: -8px;
     position: absolute;
+    transform: translateY(-50%);
     top: 50%;
     left: 10%;
     transition: all .4s;
     &.active {
-      left: calc(90% - 16px)
+      left: calc(90% - #{$radius})
     }
   }
 }
