put logo on ball

--- a/app/assets/stylesheets/components/_toggle_button.scss
+++ b/app/assets/stylesheets/components/_toggle_button.scss
@@ -18,8 +18,13 @@
     top: 50%;
     left: 10%;
     transition: all .4s;
+    overflow: hidden;
     &.active {
       left: calc(90% - #{$radius})
+    }
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
 }
