--- a/app/views/shared/_toggle.html.slim
+++ b/app/views/shared/_toggle.html.slim
@@ -5,6 +5,7 @@
   .element.mid
     .toggle-button
       .ball
+        = image_tag "logo-footer.svg"
   .element.right.sides
     .title. FOR COLLECTORS
     hr.line.w-100.no-margin
