--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -2,7 +2,7 @@
   .banner-content
     .row
       .col-12
-        h4.title.color.c-dark-blue. ARTYQUE
+        h4.title.color.c-dark-blue. Artyque Agency
       .title.color.c-dark-blue.text-center.col-12
         h4.header-text.color.mt-3.c-dark-blue.coachella-black.footer-banner-text. Bringing Artists one step forward.
       .row.two-buttons-container.mt-4
