make footer shorter

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   @extend .c-white;
   @extend .m-0;
   display: flex;
-  padding: 40px;
+  padding: 20px 40px;
   justify-content: space-between;
   align-items: flex-start;
   width: 100vw;
