--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,18 +4,18 @@
     <!-- <div class="bot-left-circle"></div> -->
     <div class="line-wrapper w-100">
       <div class="d-flex justify-content-between align-items-center">
-        <h4 class="title color c-white ml-13perc">OUR SERVICES</h4>
+        <h4 class="title color c-white ml-13perc">ABOUT US</h4>
         <hr class="lines w-70">
       </div>
     </div>
     <div class="fake-container">
       <div class="about-text">
         <p>
-          <strong>ARTYQUE</strong> is a hybrid model between a gallery and a talent agency dedicated to the career growth of emerging and mid-career artists across Europe.
+          ARTYQUE is a hybrid model between a gallery and a talent agency dedicated to the career growth of emerging and mid-career artists across Europe.
         </p>
         <br>
         <p>
-          Although <strong>our main focus is our artists’ career</strong>, the services of ARTYQUE agency are beneficial for those who want to start collecting emerging art or invest in it. We believe that by guiding an artist’s career we can ensure his or her growth and increase the value of his or her works in an organic and steady way.
+          Although our main focus is our artists’ career, the services of ARTYQUE agency are beneficial for those who want to start collecting emerging art or invest in it. We believe that by guiding an artist’s career we can ensure his or her growth and increase the value of his or her works in an organic and steady way.
         </p>
         <br>
         <br>
