--- a/app/views/contact_forms/subscribe.js.slim
+++ b/app/views/contact_forms/subscribe.js.slim
@@ -1,4 +1,4 @@
 | function refreshForm(innerHTML) { const contactForms = document.querySelectorAll('.newsletter-form'); contactForms.forEach((form) => { form.innerHTML = innerHTML; }); } 
 |  refreshForm('
-= j render "contact_forms/success"
+= j render "contact_forms/newsletter_success"
 | '); 
