--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -3,6 +3,8 @@
   img.wave-bottom.position-absolute.drag-disable src="#{image_path('bottom_wave.svg')}"
   .fake-container
     .banner-content
+      a[href="https://www.instagram.com/artyqueagency/" target="_blank" class="instagram-link title d-none d-md-block"]
+        | Instagram
       .row
         .col-12
           h4.title.color.c-white. ARTYQUE AGENCY
