--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -14,5 +14,6 @@
           .col-12.col-sm-6
             = link_to "Get in Touch", contact_path, class: "button-primary artist-button"
   .circle-banner-container
+    = link_to '', services_path, class: "fill-link"
     .circle.banner-circle.bg-blue.c-white.rotating
       p.title. <strong>·</strong>ARTYQUE FOR<strong>·</strong> COLLECTORS
