--- a/app/views/pages/home/_png_card.html.slim
+++ b/app/views/pages/home/_png_card.html.slim
@@ -1,4 +1,4 @@
-.artist-card.col-12.col-md-2.col-lg-2.position-relative.bg-beige.mx-3.position-relative
+.artist-card.col-12.col-md-2.col-lg-2.position-relative.bg-gold.mx-3.position-relative
   .artist-image-png
     = cl_image_tag artist.transparent_photo
   = link_to '', artist_path(artist), class: "link-0-0"
