--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -20,7 +20,7 @@
         .right
           p.coachella-regular Available
           p.coachella-regular.underline Works
-    .row.two-buttons-container.mb-4.lg-hide.justify-content-center
+    .row.two-buttons-container.mb-4.lg-hide.justify-content-center.d-block.d-sm-none
       .col-12.col-sm-6.center-margin
         = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
       .col-12.col-sm-6.center-margin
